@@ -12,7 +12,7 @@ public class DoubleItem extends NumberItem<Double> {
     @Override
     public void onTyped(String s) {
         System.out.println(s);
-        if (s.isBlank() || s.equals("-") || s.charAt(s.length() - 1) == '.') return;
+        if (s.trim().isEmpty() || s.equals("-") || s.charAt(s.length() - 1) == '.') return;
         String fixed = fixInput(s);
         System.out.println(s + " " + fixed);
         if (s.equals(fixed))
