@@ -37,7 +37,7 @@ public class KeybindItem extends ConfigItem<String> {
     public Text getCleanName(String str) {
         if (I18n.hasTranslation(value))
             return new TranslatableText(str);
-        if (str == null || str.isBlank())
+        if (str == null || str.trim().isEmpty())
             return new TranslatableText("key.keyboard.unknown");
         return new LiteralText(str.substring(str.length() - 1).toUpperCase());
     }
